@@ -1,8 +1,10 @@
+dist: xenial
 sudo: false
 language: python
 cache: pip
 
 matrix:
+  fast_finish: true
   include:
     - env: TOXENV=lint
     - python: 2.7
@@ -19,6 +21,24 @@ matrix:
       env: TOXENV=py35-django20
     - python: 3.6
       env: TOXENV=py36-django20
+    - python: 3.7
+      env: TOXENV=py37-django20
+    - python: 3.5
+      env: TOXENV=py35-django21
+    - python: 3.6
+      env: TOXENV=py36-django21
+    - python: 3.7
+      env: TOXENV=py37-django21
+    - python: 3.5
+      env: TOXENV=py35-djangomaster
+    - python: 3.6
+      env: TOXENV=py36-djangomaster
+    - python: 3.7
+      env: TOXENV=py37-djangomaster
+  allow_failures:
+    - env: TOXENV=py35-djangomaster
+    - env: TOXENV=py36-djangomaster
+    - env: TOXENV=py37-djangomaster
 
 install:
   - pip install tox
