@@ -3,7 +3,9 @@ universal = 1
 
 [flake8]
 exclude = .tox, docs
-ignore = E501
+ignore =
+    W504  # line break after binary operator
+    E501
 
 [metadata]
 license_file = LICENSE.txt
