@@ -2,13 +2,17 @@
 envlist =
     lint
     py{27,34,35,36}-django111
-    py{34,35,36}-django20
+    py{34,35,36,37}-django20
+    py{35,36,37}-django21
+    py{35,36,37}-djangomaster
 
 [testenv]
 commands = coverage run -m django test --settings=tests.settings
 deps =
     django111: Django>=1.11,<2.0
     django20: Django>=2.0,<2.1
+    django21: Django>=2.1,<2.2
+    djangomaster: https://github.com/django/django/archive/master.tar.gz
     coverage
 
 [testenv:lint]
