@@ -1,3 +1,8 @@
+UNRELEASED
+==========
+
+- Added support for Django 2.1 and Python 3.7.
+
 0.8.8 - 2018-01-14
 ==================
 
